Updated the text in the html

--- a/Drum.kit.html
+++ b/Drum.kit.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Drum.kit.css">
 </head>
 <body>
-
+<h2>THIS IS MY FIRST JAVASCRIIPT Drum Kit </h2>
      <div class="keys">
  <div data-key="65" class="key">
     <kbd>A</kbd>
